<?xml version="1.0" encoding="utf-8"?>
<layout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:weightSum="2"
		tools:context=".MainActivity">
	<LinearLayout android:layout_width="match_parent"
				  android:layout_height="wrap_content"
				  android:orientation="vertical"
				  android:layout_weight="2">
	<TextView
			android:id="@+id/equation_text_1"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:textColor="@color/black"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:layout_marginTop="10dp"
			android:layout_marginBottom="5dp"
			android:layout_weight="2"
			android:background="@color/text_view_bg"
			android:textSize="@dimen/text_size"
			tools:ignore="NestedWeights"/>
		<TextView
				android:id="@+id/operator_text"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:textColor="@color/black"
				android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp"
				android:layout_marginTop="10dp"
				android:layout_marginBottom="5dp"
				android:layout_weight="1"
				android:background="@color/text_view_bg"
				android:textSize="@dimen/text_size"
				tools:ignore="NestedWeights"/>
		<TextView
				android:id="@+id/equation_text_2"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:textColor="@color/black"
				android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp"
				android:layout_marginTop="10dp"
				android:layout_marginBottom="5dp"
				android:layout_weight="2"
				android:background="@color/text_view_bg"
				android:textSize="@dimen/text_size"
				tools:ignore="NestedWeights"/>
		<TextView
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:textColor="@color/black"
				android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp"
				android:layout_marginTop="5dp"
				android:layout_marginBottom="10dp"
				android:id="@+id/result_text"
				android:background="@color/text_view_bg"
				android:textSize="@dimen/text_size"/>
	</LinearLayout>
	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:orientation="vertical">
	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
		<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/btn_seven"
				android:text="@string/seven_number"
				style="@style/button_style"/>

		<Button
				android:id="@+id/btn_eight"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/eight_number"
				style="@style/button_style"
		/>
		<Button
				android:id="@+id/btn_nine"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/nine_number"
				style="@style/button_style"
		/>
		<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/divide_symbol"
				android:id="@+id/btn_divide"
				style="@style/button_style"
		/>


	</LinearLayout>
	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
		<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/btn_four"
				android:text="@string/four_number"
				style="@style/button_style"/>

		<Button
				android:id="@+id/btn_five"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/five_number"
				style="@style/button_style"
		/>
		<Button
				android:id="@+id/btn_six"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/six_number"
				style="@style/button_style"
		/>
		<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/multiply_symbol"
				android:id="@+id/btn_multiply"
				style="@style/button_style"
		/>
	</LinearLayout>
	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
		<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/btn_one"
				android:text="@string/one_number"
				style="@style/button_style"/>

		<Button
				android:id="@+id/btn_two"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/two_number"
				style="@style/button_style"
		/>
		<Button
				android:id="@+id/btn_three"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/three_number"
				style="@style/button_style"
		/>
		<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/minus_symbol"
				android:id="@+id/btn_minus"
				style="@style/button_style"
		/>


	</LinearLayout>
	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
		<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/btn_clr"
				android:text="@string/clear"
				style="@style/button_style"/>

		<Button
				android:id="@+id/btn_zero"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/zero_number"
				style="@style/button_style"
		/>
		<Button
				android:id="@+id/btn_dot"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/dot_symbol"
				style="@style/button_style"
		/>
		<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/plus_symbol"
				android:id="@+id/btn_plus"
				style="@style/button_style"/>
	</LinearLayout>
	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
		<Button
				android:id="@+id/btn_equal"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="2"
				android:text="@string/equals"
				style="@style/button_style"/>
		<Button
				android:id="@+id/btn_back"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/back_symbol"
				style="@style/button_style"/>
	</LinearLayout>
	</LinearLayout>
</LinearLayout>
</layout>